# research-skills

./: .env.example  .gitignore  BETA_TODO.md  CHANGELOG.md  CLAUDE.md  README.md  README_CN.md  README_PYPI.md  TODO_ROADMAP.md  package-lock.json  package.json  pyproject.toml  skills-core.md  skills-summary.md
.claude/: settings.local.json
.gemini/: research-skills.md
bridges/: __init__.py  base_bridge.py  claude_bridge.py  codex_bridge.py  command_runtime.py  critique_questions.py  errors.py  gemini_bridge.py  i18n.py  mcp_connectors.py  orchestrator.py
docs/: architecture.md  conventions.md  index.md  quickstart.md
guides/: agent-skill-collaboration.md  cli-reference.md  install-multi-client.md  troubleshooting-guide.md
install/: install_manifest.tsv
pipelines/: code-first-methods.yaml  empirical-study.yaml  qualitative-study.yaml  rct-prereg.yaml  systematic-review-prisma.yaml  theory-paper.yaml
release/: automation.md  rollback.md  v0.1.0-beta.1.md  v0.1.0-beta.2.md  v0.1.0-beta.4.md  v0.1.0-beta.5.md  v0.1.0-beta.6.md  v0.1.0.md  v0.2.0.md  v0.2.1.md  v0.2.2.md  v0.3.0.md  v0.4.0-beta.1.md  v0.4.0-beta.10.md  v0.4.0-beta.11.md  v0.4.0-beta.12.md  v0.4.0-beta.13.md  v0.4.0-beta.2.md  v0.4.0-beta.3.md  v0.4.0-beta.4.md  v0.4.0-beta.5.md  v0.4.0-beta.6.md  v0.4.0-beta.7.md  v0.4.0-beta.8.md  v0.4.0-beta.9.md  v0.5.0-beta.1.md  v0.5.0-beta.2.md  v0.5.0-beta.3.md
research-paper-workflow/: SKILL.md  VERSION
research_skills/: __init__.py  cli.py  install_manifest.tsv  multi_agent_smoke.py  project.toml  skill_docs.py  team_run_acceptance.py  universal_installer.py  workflow_contract_doc.py
roles/: academic-code-reviewer.yaml  compliance-officer.yaml  data-agent.yaml  literature-ra.yaml  methods-lead.yaml  pi.yaml  research-orchestrator.yaml  science-writer.yaml  (+2 more)
(+385 files in other folders)
