[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "research-skills-installer"
version = "0.1.0b13"
description = "Installer/upgrader CLI for research-skills (Codex / Claude Code / Gemini) without requiring a git fork."
readme = "README_PYPI.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{name = "Jiaxin Peng"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]

[project.urls]
Homepage = "https://github.com/jxpeng98/research-skills"
Repository = "https://github.com/jxpeng98/research-skills"
"Bug Tracker" = "https://github.com/jxpeng98/research-skills/issues"

[project.scripts]
research-skills = "research_skills.cli:main"
rsk = "research_skills.cli:main"
rsw = "research_skills.cli:main"

[tool.setuptools]
packages = ["research_skills"]

[tool.setuptools.package-data]
research_skills = ["project.toml"]
